Implemented music, navbar, animations, fancies

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/GIGANEURO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>GIGANEURO HARRISON TEMPLE</title>
+    <meta property="og:title" content="GIGANEURO HARRISON TEMPLE" />
+    <meta property="og:description" content="Sometimes indecisiveness springs from self-doubt, and other times it's just because you're trapped in the Harrison Temple" />
+    <meta property="og:url" content="https://harrisontemple.ethan-hanlon.xyz" />
+    <meta property="og:image" content="/GIGAGIGANEURO.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:site" content="GIGANEURO HARRISON TEMPLE" />
+    <meta property="twitter:title" content="GIGANEURO HARRISON TEMPLE" />
+    <meta property="twitter:description" content="Sometimes indecisiveness springs from self-doubt, and other times it's just because you're trapped in the Harrison Temple" />
+    <meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/hanlon-blog.appspot.com/o/mmmmmmm.png?alt=media&token=ab919344-ba9c-4507-b289-a9e8958266d7" />
   </head>
   <body>
     <div id="root"></div>
